--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 				"error",
 				"always"
 			],
+			"no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
 			"indent": [
 				"error",
 				"tab",
