--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"@babel/plugin-transform-modules-commonjs": "^7.9.6",
 		"babel-jest": "^26.0.1",
 		"eslint": "^6.8.0",
-		"jest": "^26.0.1"
+		"jest": "^26.0.1",
+		"tmp": "^0.2.1"
 	},
 	"scripts": {
 		"start": "node bottle.js",
